--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -7,6 +7,7 @@
           |ドヴォルザーク：交響曲第９番「新世界より」
         p.cd_song_artist
           |ボルティモア響／オールソップ
+    #player
     .current_song_concerts
       .concerts_date
         .month
