動画を取得してYoutubeAPIに投げてループさせるロジック

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,9 +6,118 @@ html lang="ja" ng-app="concertIn"
     // Assets
     = stylesheet_link_tag "application", media: "all", 'data-turbolinks-track' => true
     = javascript_include_tag "application", 'data-turbolinks-track' => true
+      
   body
     // ここにナビゲーション
     = render "layouts/navigation"
     = yield
     // ここにフッター
     = render "layouts/footer"
+
+    javascript:
+      var player;
+      var video_list;
+
+      $.ajax('/api/song_groups', {
+        type: 'GET',
+        dataType: 'json',
+        contentType: 'application/json'
+      }).done(function(data) {
+        video_list = data;
+        loadPlayer();
+      }).fail(function(jqXHR) {
+        alert(jqXHR.status + " error");
+      });
+      
+      function loadPlayer() {
+      console.log(video_list);
+          if (document.querySelector('#player')) {
+              // get API
+              var tag = document.createElement('script'),
+              firstScriptTag = document.getElementsByTagName('script')[0];
+              tag.src = 'https://www.youtube.com/iframe_api';
+              firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+                  playCount = 0;
+              function playChannel() {
+                  // init player
+                  player = new YT.Player(
+                      'player',
+                      {
+                          width: '140',
+                          height: '80',
+                          videoId: video_list[0],
+                          playerVars: {
+                              rel: 1,
+                              autoplay: 1,
+                              disablekb: 0,
+                              showsearch: 0,
+                              showinfo: 0,
+                              controls: 1,
+                              autohide: 0,
+                              modestbranding: 0,
+                              wmode: 'opaque',
+                              hd: 1,
+                              html5: 1,
+                              iv_load_policy: 3
+                          },
+                          events: {
+                              'onReady'        : onPlayerReady,
+                              'onStateChange'  : onPlayerStateChange,
+                              'onError'        : error
+                          }
+                      }
+                  );
+
+                  // play video
+                  function onPlayerReady(e) {
+                      console.log('onPlayerReady');
+                      $('.concert-box ul li:eq(0)').css('backgroundColor', 'rgb(125, 244, 130)')
+                      //ajax
+                      $.ajax({
+                        url: 'songs/search',
+                        type: 'GET',
+                        data: {videoId: video_list[playCount]}
+                      })
+                  }
+
+                  function error(e) {
+                      console.log('Error');
+                      console.log(e);
+                  }
+              }
+
+
+              function onPlayerStateChange(e) {
+                  // get state
+                  console.log(e);
+
+                  // play list loop when video end play next video
+                  if (e.data === 0) {
+                      $(".concert-box ul li" + ":eq("+playCount+")").css('backgroundColor', '');
+                      playCount++;
+                      if (playCount > (video_list.length -1)) {
+                          playCount = 0;
+                      }
+                      player.loadVideoById(video_list[playCount]);
+                      player.playVideo();
+                      $(".concert-box ul li" + ":eq("+playCount+")").css('backgroundColor', 'rgb(125, 244, 130)');
+                      console.log(playCount)
+                      $.ajax({
+                        url: 'api/song_groups/search',
+                        type: 'GET',
+                        data: {videoId: video_list[playCount]}
+                      })
+                  }
+
+                  // $('.concert-box ul li:eq(2)').css('backgroundColor', 'red');
+              }
+
+              function onYouTubeIframeAPIReady() {
+                  playChannel();
+              }
+
+              setTimeout(function() {
+                  onYouTubeIframeAPIReady();
+              }, 1200);
+          }
+      }
