--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -2,8 +2,7 @@
   .container.nav_wrapper
     .navbar-header
       a.navbar-brand href="/" target="_self"
-        / img src="/images/commons/logo.png"
-        | Concert.in
+        img src="/images/concert-in-logo.svg"
     .navbar-collapse.collapse#bs-example-navbar-collapse-1
       ul.nav.navbar-nav.navbar-right
         li
