--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,9 @@ html lang="ja" ng-app="concertIn"
   body
     // ここにナビゲーション
     = render "layouts/navigation"
-    = yield
+    
+    div(class="container" ng-view)
+      = yield
     // ここにフッター
     = render "layouts/footer"
 
@@ -115,7 +117,6 @@ html lang="ja" ng-app="concertIn"
                       });
                   }
 
-                  // $('.concert-box ul li:eq(2)').css('backgroundColor', 'red');
               }
 
               function onYouTubeIframeAPIReady() {
