--- a/app/assets/javascripts/app.js.coffee.erb
+++ b/app/assets/javascripts/app.js.coffee.erb
@@ -1,5 +1,3 @@
-# app/assets/javascripts/app.coffee
-
 # AngularJSの設定ファイル
 # 依存ライブラリを記述する
 app = angular.module('concertIn', ['ngResource', 'ngRoute'])
@@ -11,7 +9,8 @@ app.config ($httpProvider) ->
 
 
 app.config(['$routeProvider', ($routeProvider) ->
-  $routeProvider.when '/', templateUrl: "<%= asset_path 'home/top.html' %>", controller: 'TopController'
+  $routeProvider.when '/', templateUrl: "<%= asset_path 'home/top.html' %>", controller: 'TopController', reloadOnSearch: false
+  $routeProvider.when '/concerts/:concert_id', templateUrl: "<%= asset_path 'concerts/show.html' %>", controller: 'ConcertController', reloadOnSearch: false
 ])
 
 # AngularJSがturbolinksと一緒に動くようにする
