angularのテンプレート

--- a/app/assets/templates/home/top.html.slim
+++ b/app/assets/templates/home/top.html.slim
@@ -9,7 +9,7 @@
       .concert_box
         .concert_img
         .concert_content
-          .concert_title
+          a.concert_title href="/#/concerts/{{concert.id}}"
             |{{concert.title}}
           hr
           .orchestra_name
