いったんhtml5モードに

--- a/app/assets/javascripts/app.js.coffee.erb
+++ b/app/assets/javascripts/app.js.coffee.erb
@@ -7,10 +7,28 @@ app.config ($httpProvider) ->
   authToken = $("meta[name=\"csrf-token\"]").attr("content")
   $httpProvider.defaults.headers.common["X-CSRF-TOKEN"] = authToken
 
+# app.run ($rootScope, $route, $location) ->
+#   #Bind the `$locationChangeSuccess` event on the rootScope, so that we dont need to
+#   #bind in induvidual controllers.
+#   $rootScope.$on '$locationChangeSuccess', ->
+#     $rootScope.actualLocation = $location.path()
+#     return
+#   $rootScope.$watch (->
+#     $location.path()
+#   ), (newLocation, oldLocation) ->
+#     if $rootScope.actualLocation == newLocation
+#       alert 'Why did you use history back?'
+#     return
+#   return
 
-app.config(['$routeProvider', ($routeProvider) ->
-  $routeProvider.when '/', templateUrl: "<%= asset_path 'home/top.html' %>", controller: 'TopController', reloadOnSearch: false
-  $routeProvider.when '/concerts/:concert_id', templateUrl: "<%= asset_path 'concerts/show.html' %>", controller: 'ConcertController', reloadOnSearch: false
+
+
+app.config(['$routeProvider','$locationProvider', ($routeProvider, $locationProvider) ->
+  $locationProvider.html5Mode true
+
+  $routeProvider.when '/', templateUrl: "<%= asset_path 'home/top.html' %>", controller: 'TopController'
+  $routeProvider.when '/concerts/:concert_id', templateUrl: "<%= asset_path 'concerts/show.html' %>", controller: 'ConcertController'
+  $routeProvider.otherwise redirectTo: '/'
 ])
 
 # AngularJSがturbolinksと一緒に動くようにする
