--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -20,7 +20,8 @@
     .sub_navbar
       ul.sub_nav
         li
-          | 近日公演
+          a href="/#/"
+            | 近日公演
         li
           | オーケストラ一覧
         li
