--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .current_tab {
-  background-color: rgb(114, 219, 242)!important;
+  background-color: #6ec7ea !important;
 }
 
 
@@ -40,10 +40,12 @@ body {
   left: 0;
   .nav_wrapper {
     position: relative;
+    height: 110px;
     .navbar-brand {
       padding: 0px!important;
       img {
-        height: 64px;
+        height: 90px;
+        margin-top: 10px;
       }
     }
     ul.nav li a{
@@ -55,6 +57,7 @@ body {
       position: absolute;
       right: 0px;
       padding-right: 30px;
+      top: 111px;
     }
   }
 }
@@ -69,11 +72,12 @@ li {
 ul.sub_nav {
   li {
     float: right;
-    background-color: rgb(64, 69, 71);
+    background-color: #333333;
     color: #fff;
-    font-size: 80%;
-    line-height: 1.8em;
-    padding: 0 5px;
+    padding: 8px 19px;
+    font-size: 12px;
+    font-weight: 100;
+    letter-spacing: 3px;
     a {
       color: #fff;
     }
@@ -96,29 +100,29 @@ ul.sub_nav {
   .panel-body{
     padding: 0 0 0 14px;
     position: relative;
+    height: 75px;
 
     .cd_infobox {
       img.naxos_image{
-        width: 60px;
-        height: 60px;
+        width: 75px;
+        height: 75px;
         float: left;
       }
       .cd_description{
         float: left;
         padding: 8px 0 7px 6px;
         p.cd_song_title {
-          // font-size: medium;
-          margin: 0px;
+          margin: 8px 0 0 10px;
+          font-size: 14px;
         }
         p.cd_song_artist{
-          margin-top: 5px;
-          margin-bottom: 0px;
+          margin: 5px 0 0 10px;
         }
       }
     }
     .player_buttons{
       position: absolute;
-      top: 20px;
+      top: 25px;
       left: calc(50% - 41px);
       span.glyphicon-step-backward {
         font-size: x-large;
@@ -127,9 +131,11 @@ ul.sub_nav {
       span.glyphicon-play {
         font-size: x-large;
         display: none;
+        margin: 0 10px 0;
       }
       span.glyphicon-pause {
         font-size: x-large;
+        margin: 0 10px 0;
       }
       span.glyphicon-step-forward{
         font-size: x-large;
@@ -143,34 +149,42 @@ ul.sub_nav {
       border-left: solid 7px rgb(114, 219, 242);
       color: rgb(114, 219, 242);
       height: 100%;
-      width: 440px;
+      width: 475px;
       background-color: #fff;
       padding: 8px 6px;
 
       .concerts_date {
         float: left;
+        margin: 5px 0 0px 10px;
         .month{
-          font-size: 110%;
-
+          font-size: 100%;
+          color: #64c9e9;
         }
         .divide_line {
-          margin: -20px 0 0 3px;
-          font-size: 200%;
+          margin: -37px 7px -1px 8px;
+          font-size: 62px;
+          font-weight: inherit;
+          color: #64c9e9;
         }
         .day {
-          font-size: 200%;
-          margin-top: -30px;
-          margin-left: 18px;
+          font-size: 235%;
+          margin-top: -57px;
+          margin-left: 26px;
+          color: #64c9e9;
         }
       }
       .concerts_artists{
         float: left;
-        margin-left: 7px;
+        margin-left: 16px;
         p.orchestra_name {
+          color: #64c9e9;
           margin: 0px;
+          font-size: 16px;
+          margin: 6px 0 0 0;
         }
         p.conductor_name {
           margin: 5px 0 0 0;
+          color: #64c9e9;
         }
       }
       .other_concerts {
@@ -189,19 +203,24 @@ ul.sub_nav {
 //近日公演
 .soon_concert{
   h1 {
-    font-size: 25px;
+    font-size: 24px;
+    font-weight: 100;
+    letter-spacing: 2px;
   }
   img {
-    height: 40px;
+    height: 46px;
     margin-bottom: 8px;
     margin-right: 7px;
   }
-  hr {
-    border-top: 2px solid #eee!important;
-    margin-top: 10px!important;
-    margin-bottom: 15px!important;
+}
+.main{
+  > hr {
+    border-top: 2px solid #eee;
+    margin-top: 6px ;
+    margin-bottom: 18px;
   }
 }
+
 .concert_list {
   .col-md-3 {
     padding: 0 15;
@@ -226,7 +245,7 @@ ul.sub_nav {
       }
       hr {
         margin-top: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
       }
       .cond_name {
         margin-top: 5px;
@@ -236,6 +255,9 @@ ul.sub_nav {
 }
 
 //コンサート
+.ng-view{
+  margin-top: 80px;
+}
 .concert_infobox {
 
   box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12),0px 2px 2px 0px rgba(0,0,0,0.24);
