--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -231,6 +231,7 @@ ul.sub_nav {
     min-height: 300px;
     margin-bottom: 3rem;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12),0px 2px 2px 0px rgba(0,0,0,0.24);
+    background-color: #f8f8f8;
     .concert_img {
       height: 150px;
       background-image: url(https://upload.wikimedia.org/wikipedia/commons/b/b5/Dohnanyi_Orchestra_Budafok.JPG);
@@ -238,6 +239,8 @@ ul.sub_nav {
     }
     .concert_content {
       padding: 6px 10px 10px 10px;
+      color: #333333;
+      font-weight: 700;
       a {
         display: block;
         width: 100%;
