--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -215,7 +215,7 @@ ul.sub_nav {
 }
 .main{
   > hr {
-    border-top: 2px solid #eee;
+    border-top: 2px solid #82c6e7;
     margin-top: 6px ;
     margin-bottom: 18px;
   }
@@ -224,6 +224,11 @@ ul.sub_nav {
 .concert_list {
   .col-md-3 {
     padding: 0 15;
+  }
+  .concert_box:hover{
+    border: 4px solid #82c6e7;
+    transition: border .10s, width 0s .3s, height 0s .3s;
+    -webkit-transition: border .3s, width 0s .3s, height 0s .3s
   }
   .concert_box {
     padding-left: 0!important;
@@ -238,9 +243,10 @@ ul.sub_nav {
       background-size: contain;
     }
     .concert_content {
-      padding: 6px 10px 10px 10px;
+      padding: 19px 15px 10px;
       color: #333333;
       font-weight: 700;
+      font-size: 0.8em;
       a {
         display: block;
         width: 100%;
