全画面をリフレッシュしてしまうリンクになっていたのでfix

--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -1,7 +1,7 @@
 .navbar.navbar-default.nav_box
   .container.nav_wrapper
     .navbar-header
-      a.navbar-brand href="/#/" target="_self"
+      a.navbar-brand href="/"
         img src="/images/concert-in-logo.svg"
     .navbar-collapse.collapse#bs-example-navbar-collapse-1
       ul.nav.navbar-nav.navbar-right
