sub_navの順番を変更

--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -20,12 +20,12 @@
     .sub_navbar
       ul.sub_nav
         li
-          a href="/#/"
-            | 近日公演
-        li
           | オーケストラ一覧
         li
           | 指揮者一覧
         li
           | ホール一覧
+        li
+          a href="/"
+            | 近日公演
       
