--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -5,6 +5,7 @@
 //共通で使うもの
 
 body {
+  background-color: #fafafa;
   padding-top: 90px;
   padding-bottom: 80px;
   font-family: Avenir, 'Hiragino Sans', 'ヒラギノ角ゴ Pro W3', 'HIragino Kaku Gothic Pro W3', 'HIragino Kaku Gothic Pro', Meryo, メイリオ, Osaka, 'ＭＳ Ｐゴシック', 'MS P Gothic', sans-serif;
@@ -215,7 +216,7 @@ ul.sub_nav {
 }
 .main{
   > hr {
-    border-top: 2px solid #82c6e7;
+    border-top: 3px solid #ffffff;
     margin-top: 6px ;
     margin-bottom: 18px;
   }
@@ -226,17 +227,16 @@ ul.sub_nav {
     padding: 0 15;
   }
   .concert_box:hover{
-    border: 4px solid #82c6e7;
-    transition: border .10s, width 0s .3s, height 0s .3s;
-    -webkit-transition: border .3s, width 0s .3s, height 0s .3s
+    border: 2px solid #82c6e7;
   }
   .concert_box {
     padding-left: 0!important;
     padding-right: 0!important;
-    min-height: 300px;
+    min-height: 285px;
     margin-bottom: 3rem;
-    box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12),0px 2px 2px 0px rgba(0,0,0,0.24);
-    background-color: #f8f8f8;
+    box-shadow: 0 1px 1px #dddddd;
+    /*box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12),0px 2px 2px 0px rgba(0,0,0,0.24);*/
+    background-color: #ffffff;
     .concert_img {
       height: 150px;
       background-image: url(https://upload.wikimedia.org/wikipedia/commons/b/b5/Dohnanyi_Orchestra_Budafok.JPG);
