fix logo mark position

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -46,7 +46,7 @@ body {
       padding: 0px!important;
       img {
         height: 78px;
-        margin-top: 22px;
+        margin: 20px 14px;
       }
     }
     ul.nav li a{
