fix top page letter size

--- a/app/assets/templates/home/top.html.slim
+++ b/app/assets/templates/home/top.html.slim
@@ -10,7 +10,7 @@
         a.concert_title href="/concerts/{{concert.id}}"
           .concert_img
           .concert_content
-            |{{concert.title}}
+            p|{{concert.title}}
             hr
             .orchestra_name
               |{{concert.orchestra}}
