--- a/app/assets/javascripts/app.js.coffee.erb
+++ b/app/assets/javascripts/app.js.coffee.erb
@@ -13,6 +13,8 @@ app.config(['$routeProvider','$locationProvider', ($routeProvider, $locationProv
   $routeProvider.when '/', redirectTo: '/home'
   $routeProvider.when '/home', templateUrl: "<%= asset_path 'home/top.html' %>", controller: 'TopController', reloadOnSearch: false
   $routeProvider.when '/concerts/:concert_id', templateUrl: "<%= asset_path 'concerts/show.html' %>", controller: 'ConcertController', reloadOnSearch: false
+  $routeProvider.when '/orchestras', templateUrl: "<%= asset_path 'orchestras/index.html'%>", controller: 'OrchestraListController', reloadOnSearch: false
+  $routeProvider.when '/orchestras/:orchestra_id', templateUrl: "<%= asset_path 'orchestras/show.html'%>", controller: 'OrchestraController', reloadOnSearch: false
   $routeProvider.otherwise redirectTo: '/home'
 ])
 
