曜日の追加

--- a/app/assets/templates/concerts/show.html.slim
+++ b/app/assets/templates/concerts/show.html.slim
@@ -6,7 +6,7 @@
     .title
       |{{ concert.title }}
     .when.name
-      |{{ concert.start_month}}月{{ concert.start_day}}日 {{ concert.start_time}}　@{{ concert.hall}}
+      |{{ concert.start_month}}月{{ concert.start_day}}日({{ concert.start_date }}) {{ concert.start_time}}　@{{ concert.hall}}
     hr
     .players.clearfix
       .conductor
