--- a/app/assets/templates/home/top.html.slim
+++ b/app/assets/templates/home/top.html.slim
@@ -1,6 +1,6 @@
 .main.ng-cloak(ng-init="init()")
   .soon_concert
-    h1
+    h1.page_title
       = image_tag "/images/kinnjitu-logo.svg"
       |近日公演
   hr
@@ -10,7 +10,7 @@
         a.concert_title href="/concerts/{{concert.id}}"
           .concert_img style=("background-image: url({{concert.img_url}});")
             .concert_date
-              |{{concert.month}}/{{concert.day}}
+              |{{concert.month}}/{{concert.day}} {{concert.date}}
           .concert_content
             p
               |{{concert.title}}
