CDのジャケット画像を仮の画像ファイルに変更

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,7 +1,7 @@
 .panel.panel-default.panel_box
   .panel-body.container
     .cd_infobox
-      = image_tag("test_naxos.jpg", class: 'naxos_image')
+      = image_tag("/images/now-playing.svg", class: 'naxos_image')
       .cd_description
         p.cd_song_title
           |
@@ -21,6 +21,8 @@
           .divide_line
             |
           .day
+            |
+          .date
             |
         .concerts_artists
           p.orchestra_name
